# agentdir

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  release-node.yml  release-python.yml  release-rust.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-workspace-build.txt  task-10-reconcile-new.txt  task-12-batch-100.txt  task-13-cli-workflow.txt  task-3-trait-compiles.txt  task-4-clone-overwrite.txt  task-6-scan-dir.txt  task-7-materialize-content.txt  task-8-roundtrip.txt  task-9-detect-creation.txt
.sisyphus/notepads/agentdir/: learnings.md
.sisyphus/plans/: agentdir.md
bindings/node/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__test__/: index.spec.ts
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/agentdir/: __init__.py  _agentdir.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_batch_map.py  test_error_handling.py  test_export_mapping.py  test_init_open.py  test_map_unmap.py  test_query_apis.py  test_refresh.py  test_snapshot.py  test_strategy.py  test_virtual_ops.py
crates/agentdir/: Cargo.toml
crates/agentdir-cli/: Cargo.toml
crates/agentdir-cli/src/: main.rs
crates/agentdir-python/: Cargo.toml  pyproject.toml
crates/agentdir-python/src/: lib.rs
crates/agentdir/src/: backend.rs  catalog.rs  error.rs  lib.rs  manifest.rs  materializer.rs  reconciler.rs  reflink.rs  snapshot.rs  types.rs  watcher.rs  workspace.rs
crates/agentdir/src/backend/: local.rs  mod.rs
crates/agentdir/tests/: batch_map.rs  edge_agent_scenarios.rs  edge_fs.rs  edge_known_issues.rs  edge_persistence.rs  edge_reconciliation.rs  edge_virtual_paths.rs  export_mapping.rs  integration.rs  query_apis.rs  snapshot.rs  symlink_materialization.rs
