[workspace]
members = ["crates/*", "bindings/python", "bindings/node"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reflink-copy = "0.1"
notify = "8"
notify-debouncer-full = "0.5"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
globset = "0.4"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
napi = { version = "3", default-features = false, features = ["napi6", "async", "serde-json"] }
napi-derive = { version = "3", default-features = false, features = ["type-def"] }
napi-build = "2"
