[package]
name = "agentdir-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentdir"
path = "src/main.rs"
doc = false

[dependencies]
agentdir = { path = "../agentdir" }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
