[package]
name = "agentdir-cli"
version = "0.1.1"
edition = "2021"
description = "CLI for agentdir — virtual filesystem for agent-optimized file exploration"
license = "MIT"
repository = "https://github.com/NomaDamas/agentdir"

[[bin]]
name = "agentdir"
path = "src/main.rs"
doc = false

[dependencies]
agentdir = { path = "../agentdir", version = "0.1.1" }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
