[package]
name = "agentdir"
version = "0.1.2"
edition = "2021"
description = "Virtual filesystem for agent-optimized file exploration using CoW reflinks"
license = "MIT"
repository = "https://github.com/NomaDamas/agentdir"


[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
reflink-copy = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
globset = { workspace = true }
